--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "@mytravel-app/app",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
@@ -13,9 +13,9 @@
     "watch-need-help": "echo 256 | sudo tee -a /proc/sys/fs/inotify/max_user_instances && echo 32768 | sudo tee -a /proc/sys/fs/inotify/max_queued_events && echo 65536 | sudo tee -a /proc/sys/fs/inotify/max_user_watches && watchman shutdown-server"
   },
   "dependencies": {
+    "@my-workspace/my-ui": "*",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
-    "@my-workspace/my-ui": "*",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
     "install": "^0.13.0",
@@ -23,8 +23,8 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-drag-sort": "^2.4.4",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
@@ -33,7 +33,10 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "expo-yarn-workspaces": "^2.0.4",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "webpack-dev-middleware": "^6.0.1",
+    "webpack-dev-server": "^4.11.1",
+    "webpack-hot-middleware": "^2.25.3"
   },
   "private": true
 }
